fixed meet eboard section mobile display and attempted a mobile nav bar fix

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -97,9 +97,9 @@
 
     #hamburger-menu-icon {
         display: block;
-        width: 4em;
+        width: 4rem;
         height: auto;
-        padding: .5em;
+        padding: .5rem;
     }
 
     #hamburger-menu-icon:hover {
